# light-propagation

./: .gitignore  .pre-commit-config.yaml  GS_example.py  LICENSE  NN_training_example.py  NNmodel_summary.py  README.md  console.py  gerchberg_saxton.py  main.py  nn_fft_training-multiparameter.py  nn_fft_training.py  nn_multiparameter_training.py  nn_training.py  params.json  propagation_example.py  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
app/: Convolution_prop.py  Convolution_prop_NN.py  Convolution_prop_NN_ikonaJezusa.py  Convolution_prop_NN_sequential.py  propagation.py  propagation_params.py
doc/examples/: NNmodel_summary.py  console.py  gerchberg_saxton.py  nn_model_summary.py  nn_training.py  propagation.py
light_prop/: __init__.py  __main__.py  ai_propagation.py  algorithms.py  calculations.py  lightfield.py  propagation.py  propagation_facade.py  propagation_input.py  propagation_params.py  propagation_results.py  utils.py  visualisation.py
light_prop/propagation/: keras_layers.py  methods.py  params.py
light_prop/runners/: console.py
lightprop/: __init__.py  algorithms.py  calculations.py  io.py  lightfield.py  propagation_facade.py  visualisation.py
lightprop/algorithms/: gs.py  nn_trainer.py
lightprop/io/: io.py  loading.py
lightprop/lightfield/: __init__.py  lightfield.py  operations.py
lightprop/optimization/: estimators.py  gs.py  nn.py
lightprop/propagation/: convolution.py  (+3 more)
tests/: test_data_loading.py  test_light_field.py  test_propagation.py  test_propagation_params.py
(+3 files in other folders)
