[metadata]
name = light-propagation
version = 0.1
description = Light propagation lib with command line interface
long_description = file: README.md
author = Pawel Komorowski
author_email = pawel.komorowski@wat.edu.pl

[options]
include_package_data = true
packages = find:
python_requires = >=3.8


[options.entry_points]
console_scripts =
    propagate = light_prop:main
